@@ -1,0 +1,33 @@
+# Generated by Django 3.2.12 on 2022-04-05 16:02
+
+from django.db import migrations, models
+
+
+class Migration(migrations.Migration):
+
+    dependencies = [
+        ('test_app', '0003_auto_20200429_0911'),
+    ]
+
+    operations = [
+        migrations.AlterField(
+            model_name='attachment',
+            name='author',
+            field=models.CharField(blank=True, default='', help_text='Original creator', max_length=128, verbose_name='Author'),
+        ),
+        migrations.AlterField(
+            model_name='attachment',
+            name='legend',
+            field=models.CharField(blank=True, default='', help_text='Details displayed', max_length=128, verbose_name='Legend'),
+        ),
+        migrations.AlterField(
+            model_name='attachment',
+            name='starred',
+            field=models.BooleanField(default=False, help_text='Mark as starred', verbose_name='Starred'),
+        ),
+        migrations.AlterField(
+            model_name='attachment',
+            name='title',
+            field=models.CharField(blank=True, default='', help_text='Renames the file', max_length=128, verbose_name='Filename'),
+        ),
+    ]
