@@ -5,6 +5,8 @@ CHANGELOG
 2.4.2+dev  (XXXX-XX-XX)
 =======================
 
+* Replace french column name to english column name
+
 ** Fixes **
 
 *
